ทำ UI เสร็จแล้ว พร้อมเอาลงระบบ หลัก
