# backend/docs/swagger.json
@@ -1014,6 +1014,55 @@
                     }
                 }
             },
+            "put": {
+                "description": "update patientrights by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update a patientrights entity by ID",
+                "operationId": "update-patientrights",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Patientrights ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Patientrights entity",
+                        "name": "patientrights",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ent.Patientrights"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.Patientrights"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "get patientrights by ID",
                 "produces": [
@@ -1289,9 +1338,6 @@
         "controllers.Patientrights": {
             "type": "object",
             "properties": {
-                "abilitypatientrights": {
-                    "type": "integer"
-                },
                 "insurance": {
                     "type": "integer"
                 },
@@ -1302,10 +1348,8 @@
                     "type": "integer"
                 },
                 "patientrightstype": {
+                    "description": "Abilitypatientrights int",
                     "type": "integer"
-                },
-                "permissionDate": {
-                    "type": "string"
                 }
             }
         },
@@ -1449,7 +1493,7 @@
                     "description": "ID of the ent.",
                     "type": "integer"
                 },
-                "insurancePatientrights_id": {
+                "insurance_id": {
                     "type": "integer"
                 },
                 "medicalrecordstaff_id": {
