# backend/ent/schema/Patientrightstype.go
@@ -1,5 +1,5 @@
 package schema
-
+//เป็นส่วนประกอบของ OUTPUT หลัก
 import (
 	"github.com/facebookincubator/ent"
 	"github.com/facebookincubator/ent/schema/edge"
@@ -14,9 +14,9 @@ type Patientrightstype struct {
 // Fields of the Patientrightstype.
 func (Patientrightstype) Fields() []ent.Field {
 	return []ent.Field{
-		field.String("Permission"),
-		field.String("PermissionArea"),
-		field.String("Responsible"),
+		field.String("Permission"),//
+		field.String("PermissionArea"),//พื้นที่ หรือเขต หรือโรงพยาบาล ที่สามารถใช้สิทได้
+		field.String("Responsible"),//
 	}
 }
 
@@ -24,11 +24,12 @@ func (Patientrightstype) Fields() []ent.Field {
 func (Patientrightstype) Edges() []ent.Edge {
 	return []ent.Edge{
 
-		edge.To("PatientrightstypePatientrights", Patientrights.Type).StorageKey(edge.Column("Patientrightstype_id")),
+		edge.To("PatientrightstypePatientrights", Patientrights.Type).StorageKey(edge.Column("Patientrightstype_id")),//เป็นส่วนประกอบของ OUTPUT หลัก
 
 		edge.From("PatientrightstypeAbilitypatientrights", Abilitypatientrights.Type).
 			Ref("AbilitypatientrightsPatientrightstype").
 			Unique(),
+			//บอกว่า รูปแบบสิทธิ์นี้มีความสามารถอะไรบ้าง
 
 	}
 }
